--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         {
             "name": "SkeekS",
             "email": "support@skeeks.com",
-            "homepage": "http://www.skeeks.com"
+            "homepage": "https://www.skeeks.com"
         },
         {
             "name": "Semenov Alexander",
@@ -16,12 +16,12 @@
         }
     ],
     "require": {
-        "yiisoft/yii2": "*",
-		"mobiledetect/mobiledetectlib": "~2.8"
+        "yiisoft/yii2": "^2.0",
+		"mobiledetect/mobiledetectlib": "^2.8"
     },
     "autoload": {
         "psr-4": {
-            "skeeks\\yii2\\mobiledetect\\": ""
+            "skeeks\\yii2\\mobiledetect\\": "src/"
         }
     }
 }
